kubernetes/apps/selfhosted/firefly-iii/app/auth-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: firefly-iii-auth
  namespace: selfhosted
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: firefly-iii
  extAuth:
    headersToExtAuth:
      - cookie
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: security
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - X-authentik-username
        - X-authentik-groups
        - X-authentik-entitlements
        - X-authentik-email
        - X-authentik-name
        - X-authentik-uid
        - X-authentik-jwt
        - X-authentik-meta-jwks
        - X-authentik-meta-outpost
        - X-authentik-meta-provider
        - X-authentik-meta-app
        - X-authentik-meta-version
        - X-Authentik-Ffiii-User
        - X-Authentik-Ffiii-Email
