kubernetes/apps/selfhosted/firefly-iii/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly-iii
  namespace: selfhosted
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: abacus
    hajimari.io/group: finance
    hajimari.io/appName: kakeibo
spec:
  hostnames:
    - "kakeibo.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: firefly-iii-app
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly-iii-importer
  namespace: selfhosted
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: bank-transfer
    hajimari.io/group: finance
    hajimari.io/appName: kakeibo-import
spec:
  hostnames:
    - "kakeibo-import.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: firefly-iii-data-importer
          port: 8080
