kubernetes/apps/selfhosted/firefly-iii/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-iii
  annotations:
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv6.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: firefly.${SECRET_DOMAIN}
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "true"
    hajimari.io/icon: abacus
    hajimari.io/group: finance
    hajimari.io/appName: yosan
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-cloudflare-secure-forwardauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "yosan.${SECRET_DOMAIN}"
      secretName: "yosan.${SECRET_DOMAIN//./-}-prod-tls"
  rules:
    - host: yosan.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firefly-iii
                port:
                  number: 8080
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: security-ak-outpost-authentik-embedded-outpost
                port:
                  number: 9000
